--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "hogan.js": "^3.0.2",
     "jsck": "0.2.5",
     "libxmljs": "0.17.1",
-    "lodash": "3.10.0",
+    "lodash": "^4.11.1",
     "node-uuid": "1.4.7",
     "request": "2.58.0",
     "stats-lite": "2.0.0",
