--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "MPL-2.0",
   "dependencies": {
     "JSONPath": "0.11.2",
-    "arrivals": "latest",
+    "arrivals": "^2.0.2",
     "async": "1.5.2",
     "debug": "2.2.0",
     "esprima": "2.5.0",
